# exoskeleton_btp

./: CMakeLists.txt  package.xml  readme.md
arduino/: arduino_bldc_hall_ros.ino  bldc_ros_new_code.ino  test.ino
arduino/arduino_bldc_hall/: arduino_bldc_hall.ino
arduino/imu_interface/: imu_interface.ino
arduino/test2.ino/: test2.ino.ino
arduino/testMotorControl/: testMotorControl.ino
arduino/testMotorControl2.ino/: testMotorControl2.ino.ino
arduino/testMotorControl222.ino/: testMotorControl222.ino.ino
config/: exoskeleton.rviz  exoskeleton_trajectory.rviz  joint_names_for_simulations.SLDASM.yaml  test112.yaml  test1122.yaml
launch/: arduino.launch  display.launch  display_imu.launch  exo_full.launch  gazebo.launch  mqtt_test.launch  test_scripts.launch
meshes/: base_link.STL  left_IR.STL  left_abd.STL  pin2.STL  pin3.STL  pin4.STL  rig_base_link.STL  right_IR.STL  right_abd.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
meshes1/: base_link.STL  left_hip_IR.STL  left_hip_abd.STL  right_hip_IR.STL  right_hip_abd.STL
msg/: batteryInfo.msg  exoAllJointCommand.msg  exoAllJointFeedbackMsg.msg  exoAllJointTrajectory.msg  exoAllPid.msg  exoJointCommand.msg  exoJointFeedbackMsg.msg  exoJointVelocity.msg  exoStates.msg  imuArray.msg  imuData.msg  imuQuaternion.msg  jointFeedback.msg  uiDisplayMessage.msg  userInput.msg  velocityEffort.msg  walkingParameters.msg
scripts/: arduinoBldcSpeedControl.py  exo_execution_handler.py  exo_execution_with_process_handler.py  exo_ros_mqtt_endpoint.py  exo_ros_mqtt_endpoint_mutiple_joints.py  exo_tf_publisher.py  inverse_kinematics.py  joint_trajectory_client.py  joint_trajectory_client2.py  listenArduinoImu.py  object_test.py  publish_joint_trajectories.py  set_mosquitto.sh  state_machine.py  test.py  trajectory_execution.py  trajectory_generator.py  trajectory_motor_control.py  trajectory_publisher.py  visualize_imu.py
trajectories/: subject01_walk1_ik.csv  subject01_walk1_ik.mot  subject01_walk1_ik2.csv
urdf/: exoskeleton_btp.csv  exoskeleton_btp.gv  exoskeleton_btp.urdf  exoskeleton_walking_gazebo.urdf  exoskeleton_walking_gazebo2.urdf  exoskeleton_walking_moveit.urdf  for_simulations.SLDASM.csv  rig_exoskeleton.urdf  rig_exoskeleton_trap.urdf  test2 (copy).urdf  test2.urdf  test2_gazebo.urdf  test2_gazebo2.urdf  test_moveit.urdf
